--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -15,17 +15,18 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style></head><body>
+</style></head>
+<body>
 <h1>Version 0.8.4 (??/05/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
+  <li>L'ordre des onglets peut à présent être modifié.<span class="bugFix"></span></li><li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
 fichier ouvert à l'ouverture de Yapbam présentait une alerte sur le
 solde, celle-ci n'était pas immédiatement affichée dans l'onglet
 "Historique du solde".<br>
   </li>
 </ul>
-<br>
+
 <ul></ul>
 <hr>
 <h1>Versions précédentes</h1>
