--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -23,8 +23,10 @@ color: #ff9900;
   <li>L'ordre des onglets peut à présent être modifié.<span class="bugFix"></span></li><li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
 fichier ouvert à l'ouverture de Yapbam présentait une alerte sur le
 solde, celle-ci n'était pas immédiatement affichée dans l'onglet
-"Historique du solde".<br>
-  </li>
+"Historique du solde".</li><li><span class="bugFix">Correction d'un bug</span>
+: Sélectionner une opération dans les onglets "Relevés de compte" ou
+"Historique du solde" laissait les menus Effacer/Modifier/Dupliquer
+grisés.</li><li>Correction de quelques libellés français.</li>
 </ul>
 
 <ul></ul>
