--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -20,7 +20,10 @@ color: #ff9900;
 <h1>Version 0.8.4 (21/05/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
+  <li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li>Réduit
+les menus contextuels dans l'onglet "Statistiques" aux items utiles
+(par exemple : plus de "Enregistrer sous". Il créait un fichier
+illisible).</li><li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
 fichier ouvert à l'ouverture de Yapbam présentait une alerte sur le
 solde, celle-ci n'était pas immédiatement affichée dans l'onglet
 "Historique du solde".</li><li><span class="bugFix">Correction d'un bug</span>
