--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -17,7 +17,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.4 (21/05/2011)</h1>
+<h1>Version 0.8.4 (22/05/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li>Réduit
@@ -29,7 +29,7 @@ solde, celle-ci n'était pas immédiatement affichée dans l'onglet
 "Historique du solde".</li><li><span class="bugFix">Correction d'un bug</span>
 : Sélectionner une opération dans les onglets "Relevés de compte" ou
 "Historique du solde" laissait les menus Effacer/Modifier/Dupliquer
-grisés.</li><li><span class="bugFix">Correction</span> de quelques libellés français.</li>
+grisés.</li><li><span class="bugFix">Correction</span> de problèmes de localisation (des libellés qui n'apparaissaient pas dans la bonne langue).</li>
 </ul>
 
 <ul></ul>
