--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -17,10 +17,18 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.4 (30/05/2011)</h1>
+<h1>Version 0.8.5 (31/05/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul>
-  <li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li>Réduit
+<ul><li><span class="bugFix">Correction d'un bug</span> dans
+l'assistant de saisie qui pouvait planter lorsqu'un filtre était activé
+et que la description choisie ne figurait pas dans les opérations
+filtrées.</li>
+</ul>
+
+<ul></ul>
+<hr>
+<h1>Versions précédentes</h1>
+<h2>Version 0.8.4 (30/05/2011)</h2><ul><li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li>Réduit
 les menus contextuels dans l'onglet "Statistiques" aux items utiles
 (par exemple : plus de "Enregistrer sous". Il créait un fichier
 illisible).</li><li><span class="bugFix">Correction d'un bug</span>&nbsp;: Si le
@@ -29,13 +37,7 @@ solde, celle-ci n'était pas immédiatement affichée dans l'onglet
 "Historique du solde".</li><li><span class="bugFix">Correction d'un bug</span>
 : Sélectionner une opération dans les onglets "Relevés de compte" ou
 "Historique du solde" laissait les menus Effacer/Modifier/Dupliquer
-grisés.</li><li><span class="bugFix">Correction</span> de problèmes de localisation (des libellés qui n'apparaissaient pas dans la bonne langue).</li>
-</ul>
-
-<ul></ul>
-<hr>
-<h1>Versions précédentes</h1>
-<h2>Version 0.8.3 (08/05/2011)</h2><ul><li>Ajoute un onglet de résumé des bilans de l'ensemble des comptes.</li><li>Ajoute
+grisés.</li><li><span class="bugFix">Correction</span> de problèmes de localisation (des libellés qui n'apparaissaient pas dans la bonne langue).</li></ul><h2>Version 0.8.3 (08/05/2011)</h2><ul><li>Ajoute un onglet de résumé des bilans de l'ensemble des comptes.</li><li>Ajoute
 une table des opération dans l'onglet "Historique du solde". Cette
 table récapitule les opérations triées suivant leur date de valeur et le
 solde restant après chacune d'elle.</li><li>Lorsqu'un
