--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.8.6 (06/??/2011)</h1>
+<h1>Version 0.8.6 (06/05/2011)</h1>
 <h2>New in this version</h2><ul><li><span class="bugFix">Fixes a bug</span>: When a tab was dragged and dropped outside of the tabs area, an error occured.</li></ul>
 <ul></ul>
 
