--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -17,7 +17,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.6 (??/06/2011)</h1>
+<h1>Version 0.8.6 (05/06/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul><li><span class="bugFix">Correction d'un bug</span> : Déplacer un onglet hors de la zone des onglets provoquait une erreur.</li>
 </ul>
