--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -17,15 +17,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.6 (05/06/2011)</h1>
+<h1>Version 0.9.0 (??/06/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction d'un bug</span> : Déplacer un onglet hors de la zone des onglets provoquait une erreur.</li>
+<ul><li>Le dialogue "Filtre personnalisé" est moins haut. Il est à présent compatible avec les écran de 768px de haut.<span class="bugFix"><br></span></li>
 </ul>
 
 <ul></ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.8.5 (31/05/2011)</h2><ul><li><span class="bugFix">Correction d'un bug</span> dans
+<h2>Version 0.8.6 (05/06/2011)</h2><ul><li><span class="bugFix">Correction d'un bug</span> : Déplacer un onglet hors de la zone des onglets provoquait une erreur.</li></ul><h2>Version 0.8.5 (31/05/2011)</h2><ul><li><span class="bugFix">Correction d'un bug</span> dans
 l'assistant de saisie qui pouvait planter lorsqu'un filtre était activé
 et que la description choisie ne figurait pas dans les opérations
 filtrées.</li></ul><h2>Version 0.8.4 (30/05/2011)</h2><ul><li>L'ordre des onglets peut à présent être modifié.</li><li>Ajout de raccourcis clavier pour éditer ou dupliquer une opération.</li><li>Ajout d'un menu pour pointer une opération.</li><li>Réduit
