--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,8 +15,8 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.9.0 (06/??/2011)</h1>
-<h2>New in this version</h2><ul><li>The "customized filter" is smaller and now compatible will 768px height screens.</li></ul>
+<h1>Version 0.8.7 (06/??/2011)</h1>
+<h2>New in this version</h2><ul><li>The "customized filter" dialog is smaller and now compatible will 768px height screens.</li></ul>
 <ul></ul>
 
 <ul></ul>
