--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -17,9 +17,12 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.7 (??/06/2011)</h1>
+<h1>Version 0.8.7 (??/07/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Le dialogue "Filtre personnalisé" est moins haut. Il est à présent compatible avec les écran de 768px de haut.<span class="bugFix"><br></span></li>
+<ul><li>Le dialogue "Filtre personnalisé" est moins haut. Il est à présent compatible avec les écran de 768px de haut.</li><li><span class="bugFix">Corrections de bugs</span> dans les dialogues :</li><ul><li>Le bouton "Annuler" des dialogues de saisie des catégories et des comptes validait la saisie !</li><li>Dans
+certains dialogues, on pouvait entrer une valeur incorrecte et valider
+en cliquant très rapidement le bouton valider après avoir saisie la
+valeur incorrecte.</li></ul>
 </ul>
 
 <ul></ul>
