--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -14,8 +14,7 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
 <h1>Version 0.8.7 (??/07/2011)</h1>
 <h2>Nouveautés de cette version</h2>
@@ -35,7 +34,7 @@ valeur incorrecte.</li>
 <li><span class="bugFix">Correction d'un bug</span> dans
 l'onglet d'administration. Les boutons "Editer" "Dupliquer" et
 "Supprimer" n'étaient pas grisés lorsqu'aucune information n'était
-sélectionnée. Parfois cela pouvait entrainer des plantages.</li>
+sélectionnée. Parfois cela pouvait entrainer des plantages.</li><li><span class="bugFix">Correction d'un bug</span> dans le dialogue d'édition des opérations : Cocher la case "recette" quand le champ "montant" était vide provoquait une erreur.</li>
 </ul>
 <ul>
 </ul>
