--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -18,10 +18,12 @@ color: #ff9900;
 <h1>Version 0.8.7 (07/??/2011)</h1>
 <h2>New in this version</h2><ul><li>The "customized filter" dialog is smaller and now compatible will 768px height screens.</li><li><span class="bugFix">Fixes&nbsp;bugs</span> in some dialogs:</li><ul><li>The cancel button in the category dialog and the account dialog confirmed the dialog (same action as ok !).</li><li>In
 some dialogs, typing a wrong value didn't prevent you from validate the
-dialog if you clicked very, very, very quickly the ok button.</li></ul><li><span class="bugFix">Fixes a bug</span>
-in the administration tab. "Delete", "Duplicate" and "Edit" buttons
+dialog if you clicked very, very, very quickly the ok button.</li></ul><li><span class="bugFix">Fixes&nbsp;bugs</span>
+in the administration tab:</li><ul><li>"Delete", "Duplicate" and "Edit" buttons
 were not greyed out when no data was selected. Sometimes it could cause
-crashes.</li><li><span class="bugFix">Fixes a bug</span> in transaction dialog, checking the receipt box when amount field was empty caused a crash.</li></ul>
+crashes.</li><li>Deleting the content of the "initial balance" cell of an account in the accounts table caused a crash.</li></ul><li><span class="bugFix">Fixes a bug</span> in transaction dialog, checking the receipt box when amount field was empty caused a crash.</li><li><span class="bugFix">Fixes a bug</span>
+in the "customized filters" dialog: The "Clear all filters" button didn't erase the
+filter based on the receipt/expense nature of the transaction.</li></ul>
 <ul></ul>
 
 <ul></ul>
