--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -31,10 +31,13 @@ certains dialogues, on pouvait entrer une valeur incorrecte et valider
 en cliquant très rapidement le bouton valider après avoir saisie la
 valeur incorrecte.</li>
 </ul>
-<li><span class="bugFix">Correction d'un bug</span> dans
-l'onglet d'administration. Les boutons "Editer" "Dupliquer" et
+<li><span class="bugFix">Correction de bugs</span> dans
+l'onglet d'administration :</li><ul><li>Les boutons "Editer" "Dupliquer" et
 "Supprimer" n'étaient pas grisés lorsqu'aucune information n'était
-sélectionnée. Parfois cela pouvait entrainer des plantages.</li><li><span class="bugFix">Correction d'un bug</span> dans le dialogue d'édition des opérations : Cocher la case "recette" quand le champ "montant" était vide provoquait une erreur.</li>
+sélectionnée. Parfois cela pouvait entrainer des plantages.</li><li>Effacer le contenu d'une cellule&nbsp;"solde initial" dans l'onglet de gestion des comptes provoquait un plantage.</li></ul><li><span class="bugFix">Correction d'un bug</span> dans le dialogue d'édition des opérations : Cocher la case "recette" quand le champ "montant" était vide provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span>
+dans le dialogue "Filtre personnalisé" : Le bouton "Effacer tous les
+filtre" n'effaçait pas le filtre sur la nature&nbsp;recette/dépense des
+opérations.</li>
 </ul>
 <ul>
 </ul>
