--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,11 +16,11 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.7 (??/07/2011)</h1>
+<h1>Version 0.8.7 (23/07/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li>Le dialogue "Filtre personnalisé" est moins haut. Il est à
-présent compatible avec les écran de 768px de haut.</li>
+présent compatible avec les écrans de 768px de haut.</li>
 <li><span class="bugFix">Corrections de bugs</span>
 dans les dialogues :</li>
 <ul>
@@ -32,11 +32,11 @@ en cliquant très rapidement le bouton valider après avoir saisie la
 valeur incorrecte.</li>
 </ul>
 <li><span class="bugFix">Correction de bugs</span> dans
-l'onglet d'administration :</li><ul><li>Les boutons "Editer" "Dupliquer" et
+l'onglet d'administration :</li><ul><li>Les boutons "Editer", "Dupliquer" et
 "Supprimer" n'étaient pas grisés lorsqu'aucune information n'était
 sélectionnée. Parfois cela pouvait entrainer des plantages.</li><li>Effacer le contenu d'une cellule&nbsp;"solde initial" dans l'onglet de gestion des comptes provoquait un plantage.</li></ul><li><span class="bugFix">Correction d'un bug</span> dans le dialogue d'édition des opérations : Cocher la case "recette" quand le champ "montant" était vide provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span>
 dans le dialogue "Filtre personnalisé" : Le bouton "Effacer tous les
-filtre" n'effaçait pas le filtre sur la nature&nbsp;recette/dépense des
+filtres" n'effaçait pas le filtre sur la nature&nbsp;recette/dépense des
 opérations.</li>
 </ul>
 <ul>
