--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -32,7 +32,7 @@ upload results in a partial file.</li>
 <li>In the sourceforge file browser, give the linux, BSD,
 etc... attributes (all except windows) to the new file.</li>
 <li>Create the windows installer with NSIS.<br>
-select the "Installer based on a zip file" option.</li>
+select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li>
 <li>Upload the windows installer on sourceforge, test it and
 give it the "windows" attribute.</li>
 <li>Copy the modified archive and the updater to a folder
