--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.8.7 (07/??/2011)</h1>
+<h1>Version 0.8.7 (07/23/2011)</h1>
 <h2>New in this version</h2><ul><li>The "customized filter" dialog is smaller and now compatible will 768px height screens.</li><li><span class="bugFix">Fixes&nbsp;bugs</span> in some dialogs:</li><ul><li>The cancel button in the category dialog and the account dialog confirmed the dialog (same action as ok !).</li><li>In
 some dialogs, typing a wrong value didn't prevent you from validate the
 dialog if you clicked very, very, very quickly the ok button.</li></ul><li><span class="bugFix">Fixes&nbsp;bugs</span>
