--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Notes de mise à jour</title>
 
 <style type="text/css">
@@ -14,24 +15,27 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style></head>
-<body>
-<h1>Version 0.8.7 (23/07/2011)</h1>
+</style></head><body>
+<h1>Version 0.8.8 (??/08/2011)</h1>
 <h2>Nouveautés de cette version</h2>
+<ul><li><span class="bugFix">Correction d'un bug</span> dans la table
+des opérations de l'onglet "Historique du solde" : Lorsqu'une opération
+était modifiée, la table était mise à jour mais présentait des données
+incorrectes.</li>
+</ul>
+<ul>
+</ul>
+<hr>
+<h1>Versions précédentes</h1>
+<h2>Version 0.8.7 (23/07/2011)</h2>
 <ul>
 <li>Le dialogue "Filtre personnalisé" est moins haut. Il est à
-présent compatible avec les écrans de 768px de haut.</li>
-<li><span class="bugFix">Corrections de bugs</span>
-dans les dialogues :</li>
-<ul>
-<li>Le bouton "Annuler" des dialogues de saisie des
-catégories et des comptes validait la saisie !</li>
-<li>Dans
+présent compatible avec les écrans de 768px de haut.</li><li><span class="bugFix">Corrections de bugs</span>
+dans les dialogues :</li><ul><li>Le bouton "Annuler" des dialogues de saisie des
+catégories et des comptes validait la saisie !</li><li>Dans
 certains dialogues, on pouvait entrer une valeur incorrecte et valider
 en cliquant très rapidement le bouton valider après avoir saisie la
-valeur incorrecte.</li>
-</ul>
-<li><span class="bugFix">Correction de bugs</span> dans
+valeur incorrecte.</li></ul><li><span class="bugFix">Correction de bugs</span> dans
 l'onglet d'administration :</li><ul><li>Les boutons "Editer", "Dupliquer" et
 "Supprimer" n'étaient pas grisés lorsqu'aucune information n'était
 sélectionnée. Parfois cela pouvait entrainer des plantages.</li><li>Effacer le contenu d'une cellule&nbsp;"solde initial" dans l'onglet de gestion des comptes provoquait un plantage.</li></ul><li><span class="bugFix">Correction d'un bug</span> dans le dialogue d'édition des opérations : Cocher la case "recette" quand le champ "montant" était vide provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span>
@@ -39,10 +43,6 @@ dans le dialogue "Filtre personnalisé" : Le bouton "Effacer tous les
 filtres" n'effaçait pas le filtre sur la nature&nbsp;recette/dépense des
 opérations.</li>
 </ul>
-<ul>
-</ul>
-<hr>
-<h1>Versions précédentes</h1>
 <h2>Version 0.8.6 (05/06/2011)</h2>
 <ul>
 <li><span class="bugFix">Correction d'un bug</span>
