--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -20,9 +20,7 @@ color: #ff9900;
 <h2>New in this version</h2><ul><li><span class="bugFix">Fixes a bug</span>
 in the transactions table of the balance history tab; When a
 transaction was edited, the table was refreshed, but not with the right data.</li><li><span class="bugFix">Fixes a bug</span>
-in the import process: When a cell of the imported file contained an
-invalid value and this cell was beyond the 9th column, the import
-failed.</li></ul>
+in the import process: When a the imported file contained invalid values and has more than none columns, the import failed.</li></ul>
 <ul></ul>
 
 <ul></ul>
