--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -22,7 +22,7 @@ color: #ff9900;
 <ul><li><span class="bugFix">Correction d'un bug</span> dans la table
 des opérations de l'onglet "Historique du solde" : Lorsqu'une opération
 était modifiée, la table était mise à jour mais présentait des données
-incorrectes.</li><li><span class="bugFix">Correction d'un bug</span> qui faisait échouer l'import lorsqu'une cellule au delà de la neuvième colonne contenait une valeur incorrecte.</li>
+incorrectes.</li><li><span class="bugFix">Correction d'un bug</span> qui faisait échouer l'import lorsque le fichier comportait plus de neuf colonnes et contenait des valeurs incorrectes.</li>
 </ul>
 <ul>
 </ul>
