--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -17,20 +17,18 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.8.8 (08/03/2011)</h1>
-<h2>New in this version</h2><ul><li><span class="bugFix">Fixes a bug</span>
-in the transactions table of the balance history tab; When a
-transaction was edited, the table was refreshed, but not with the right data.</li><li><span class="bugFix">Fixes a bug</span>
-in the import process: When a the imported file contained invalid values and has more than none columns, the import failed.</li>
-  <li><span class="bugFix">Fixes a bug</span>&nbsp;in the "periodical transactions" administration panel. The table was not refreshed when these transactions were modified.<br>
-  </li>
+<h1>Version 0.9.0 (08/??/2011)</h1>
+<h2>New in this version</h2><ul><li>Adds a preference dialog to set data is remembered between two Yapbam launches.</li><li>The filter can be remembered between two launches.</li>
 </ul>
 <ul></ul>
 
 <ul></ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.8.7 (07/23/2011)</h2>
+<h2>Version 0.8.8 (08/03/2011)</h2><ul><li><span class="bugFix">Fixes a bug</span>
+in the transactions table of the balance history tab; When a
+transaction was edited, the table was refreshed, but not with the right data.</li><li><span class="bugFix">Fixes a bug</span>
+in the import process: When a the imported file contained invalid values and has more than none columns, the import failed.</li><li><span class="bugFix">Fixes a bug</span>&nbsp;in the "periodical transactions" administration panel. The table was not refreshed when these transactions were modified.</li></ul><h2>Version 0.8.7 (07/23/2011)</h2>
 <ul>
 <li>The "customized filter" dialog is smaller and now compatible will 768px height screens.</li><li><span class="bugFix">Fixes&nbsp;bugs</span> in some dialogs:</li><ul><li>The cancel button in the category dialog and the account dialog confirmed the dialog (same action as ok !).</li><li>In
 some dialogs, typing a wrong value didn't prevent you from validate the
