--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -18,24 +18,23 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.8 (03/08/2011)</h1>
+<h1>Version 0.9.0 (03/08/2011)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction d'un bug</span> dans la table
-des opérations de l'onglet "Historique du solde" : Lorsqu'une opération
-était modifiée, la table était mise à jour mais présentait des données
-incorrectes.</li><li><span class="bugFix">Correction d'un bug</span> qui faisait échouer l'import lorsque le fichier comportait plus de neuf colonnes et contenait des valeurs incorrectes.</li>
-  <li><span class="bugFix">Correction d'un bug</span>
-dans l'administration des opérations périodiques. Les modifications de
-ces opérations n'étaient pas reportées dans le tableau sans redémarrage
-de Yapbam.<br>
-  </li>
+<ul><li>Ajout d'un onglet dans le dialogue des préférences pour régler
+quelles informations sont conservées entre deux exécutions de Yapbam.</li><li>Ajout de la possibilité de mémoriser le filtre entre deux exécutions de Yapbam.</li><li>Ajout d'une mode de création en masse des opérations.</li>
 
 </ul>
 <ul>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.8.7 (23/07/2011)</h2>
+<h2>Version 0.8.8 (03/08/2011)</h2><ul><li><span class="bugFix">Correction d'un bug</span> dans la table
+des opérations de l'onglet "Historique du solde" : Lorsqu'une opération
+était modifiée, la table était mise à jour mais présentait des données
+incorrectes.</li><li><span class="bugFix">Correction d'un bug</span> qui faisait échouer l'import lorsque le fichier comportait plus de neuf colonnes et contenait des valeurs incorrectes.</li><li><span class="bugFix">Correction d'un bug</span>
+dans l'administration des opérations périodiques. Les modifications de
+ces opérations n'étaient pas reportées dans le tableau sans redémarrage
+de Yapbam.</li></ul><h2>Version 0.8.7 (23/07/2011)</h2>
 <ul>
 <li>Le dialogue "Filtre personnalisé" est moins haut. Il est à
 présent compatible avec les écrans de 768px de haut.</li><li><span class="bugFix">Corrections de bugs</span>
